[package]
name = "leveldb"
version = "0.8.4"
authors = [ "Florian Gilcher <florian.gilcher@asquera.de>" ]
edition = "2018"

description = "An interface for leveldb"

license = "MIT"
readme = "README.md"

documentation = "http://skade.github.io/leveldb/"
homepage = "https://github.com/skade/leveldb"
repository = "https://github.com/skade/leveldb"

[lib]
name = "leveldb"

[dependencies]
libc = "0.2.4"

[dependencies.leveldb-sys]
path = "../leveldb-sys"

[dev-dependencies]
tempdir = "0.3.4"
